tests/sksl/errors/golden/DoTypeMismatch.glsl
### Compilation failed:

error: 2: expected 'bool', but found 'float2'
1 error
